# GeneticAlgorithm

./: .gitignore  CMakeLists.txt  main.cpp
py_chart_generation/: generate  run.sh
py_chart_generation/charts/: ps100gen100px0.1pm0.01tour10ranking.csv  ps100gen100px0.1pm0.01tour10roullete.csv  ps100gen100px0.1pm0.01tour5ranking.csv  ps100gen100px0.1pm0.01tour5roullete.csv  ps100gen100px0.1pm0.1tour10ranking.csv  ps100gen100px0.1pm0.1tour10roullete.csv  ps100gen100px0.1pm0.1tour5ranking.csv  ps100gen100px0.1pm0.1tour5roullete.csv  ps100gen100px0.1pm0.5tour10ranking.csv  ps100gen100px0.1pm0.5tour10roullete.csv  ps100gen100px0.1pm0.5tour5ranking.csv  ps100gen100px0.1pm0.5tour5roullete.csv  ps100gen100px0.5pm0.01tour10ranking.csv  ps100gen100px0.5pm0.01tour10roullete.csv  ps100gen100px0.5pm0.01tour5ranking.csv  ps100gen100px0.5pm0.01tour5roullete.csv  ps100gen100px0.5pm0.1tour10ranking.csv  ps100gen100px0.5pm0.1tour10roullete.csv  ps100gen100px0.5pm0.1tour5ranking.csv  ps100gen100px0.5pm0.1tour5roullete.csv  ps100gen100px0.5pm0.5tour10ranking.csv  ps100gen100px0.5pm0.5tour10roullete.csv  ps100gen100px0.5pm0.5tour5ranking.csv  ps100gen100px0.5pm0.5tour5roullete.csv  ps100gen100px0.7pm0.01tour10ranking.csv  ps100gen100px0.7pm0.01tour10roullete.csv  ps100gen100px0.7pm0.01tour5ranking.csv  ps100gen100px0.7pm0.01tour5ranking0.csv  (+54 more)
src/: CMakeLists.txt  Evolution.cpp  Evolution.h  FileReader.cpp  FileReader.h  Problem.cpp  Problem.h  Random.cpp  Random.h  Result.cpp  Result.h  SquareMatrix.cpp  SquareMatrix.h  main.cpp
ut/: CMakeLists.txt  test.cpp
